--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/pork-peach-salad.html">Grilled Pork and Peach Salad</a></li>
+    </ul>
+
 </body>
 
 </html>
