--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Lasagna</h1>
-    <img src="../images/easy-lasagna.jpg" alt="Picture of delicious freshly made lasagna, sitting in a tray" width="300"
+    <img src="../images/easy-lasagna.jpg" alt="Picture of delicious, freshly made lasagna, sitting in a tray" width="300"
         height="300">
     <h2>Description</h2>
     <p>An <strong>easy</strong> lasagna recipe that saves me lots of time.</p>
