--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/pork-peach-salad.html">Grilled Pork and Peach Salad</a></li>
+        <li><a href="./recipes/grilled-corn.html">Grilled corn on the Cob</a></li>
     </ul>
 
 </body>
