Add suggestive titles to every existing page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna Recipe</title>
 </head>
 
 <body>
     <h1>Lasagna</h1>
-    <img src="../images/easy-lasagna.jpg" alt="Picture of delicious, freshly made lasagna, sitting in a tray" width="300"
-        height="300">
+    <img src="../images/easy-lasagna.jpg" alt="Picture of delicious, freshly made lasagna, sitting in a tray"
+        width="300" height="300">
     <h2>Description</h2>
     <p>An <strong>easy</strong> lasagna recipe that saves me lots of time.</p>
     <p>This recipe is <strong>simple</strong> and satisfies everyone in the family.
