Add functionality for returning to home page
Add a button "Return to the home page" at the bottom of each
recipe page, which redirects users to the index page.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Easy home recipes</h1>
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/pork-peach-salad.html">Grilled Pork and Peach Salad</a></li>
         <li><a href="./recipes/grilled-corn.html">Grilled corn on the Cob</a></li>
     </ul>
-
 </body>
 
 </html>
