--- a/recipes/grilled-corn.html
+++ b/recipes/grilled-corn.html
@@ -29,6 +29,7 @@
         <li>Wrap each ear of corn tightly in aluminum foil.</li>
         <li>Cook on the preheated grill, turning occasionally, until tender, about 30 minutes.</li>
     </ol>
+    <p><a href="../index.html">Return to the home page</a></p>
 </body>
 
 </html>
