--- a/recipes/pork-peach-salad.html
+++ b/recipes/pork-peach-salad.html
@@ -61,6 +61,7 @@
             note).</li>
         <li>Arrange salad on plates, and sprinkle 1/4 cup blueberries on each plate.</li>
     </ol>
+    <p><a href="../index.html">Return to the home page</a></p>
 </body>
 
 </html>
