--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -44,6 +44,7 @@
         <li>Bake in the preheated oven for 45 minutes. Uncover and bake for an additional 10 minutes. Let stand 10
             minutes before serving.</li>
     </ol>
+    <p><a href="../index.html">Return to the home page</a></p>
 </body>
 
 </html>
