--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <h1>Easy home recipes</h1>
+    <img src="images/chef-logo.jpg" alt="Logo of a frying pan with steam coming out in the form of a chef cap"
+        width="300" height="200">
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/pork-peach-salad.html">Grilled Pork and Peach Salad</a></li>
