Add colors, fonts and image borders with CSS

--- a/recipes/grilled-corn.html
+++ b/recipes/grilled-corn.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Grilled Corn on the Cob</h1>
-    <img src="../images/grilled-corn.jpg" alt="Picture of tasty grilled corn on the cob" width="300" height="300">
+    <img src="../images/grilled-corn.jpg" alt="Picture of tasty grilled corn on the cob" height="300" width="auto">
     <h2>Description</h2>
     <p>Grilled corn on the cob is <em>easy</em> and <em>perfect</em> for every <em>summer barbecue</em>.</p>
     <p>With <strong>foil, butter, salt</strong>, and a little <strong>pepper</strong>,
