--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <h1>Easy home recipes</h1>
-    <img src="images/chef-logo.jpg" alt="Logo of a frying pan with steam coming out in the form of a chef cap"
-        width="300" height="200">
+    <img src="images/chef-logo.png" alt="Logo of a chef cap and silverware" height="200" width="auto">
+    <h2>Recipes</h2>
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/pork-peach-salad.html">Grilled Pork and Peach Salad</a></li>
