--- a/recipes/pork-peach-salad.html
+++ b/recipes/pork-peach-salad.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Grilled pork and peach salad</h1>
     <img src="../images/pork-peach-salad.jpg" alt="Picture of fresh, grilled pork and peach salad, on a plate"
-        width="300" height="300">
+        height="300" width = auto>
     <h2>Description</h2>
     <p>Summer is perfect for <em>salads</em> and <em>grilling</em>. Summer is also perfect for <em>peaches</em>,
         and <strong>this salad combines all three!</strong></p>
